--- a/src/sass/analysis/_metaAnalysis.scss
+++ b/src/sass/analysis/_metaAnalysis.scss
@@ -15,14 +15,22 @@
   }
 
   .meta-analysis-content-container {
-    margin-top: 1.0rem;
 
     .gene-search-container {
-      margin-bottom: 1.0rem;
-      padding-left: 0;
-      padding-right: 0;
-
       .gene-search-content {
+        form {
+          position: relative;
+        }
+
+        label {
+          font-size: 1.0rem;
+          font-weight: 600;
+        }
+
+        .input-group {
+          min-width: 25.0em;
+        }
+
         input {
           border-color: $primary-blue;
         }
@@ -31,79 +39,84 @@
           line-height: 0;
         }
       }
+    }
 
-      .gene-search-result {
-        table {
-          font-size: 0.9rem;
+    .gene-stat-plot-wrapper,
+    .gene-meta-analysis-container {
+      table {
+        font-size: 0.9rem;
+      }
+    }
+
+    .geneAnalysisDataTable {
+      border-collapse: collapse;
+      font-size: 0.85rem;
+      margin-bottom: 0;
+      text-align: center;
+
+      th, td {
+        border: 1px solid #dee2e6;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+      }
+
+      tr:first-child th, tr:first-child td {
+        border-top: 0;
+      }
+
+      tr th:first-child, tr td:first-child {
+        border-left: 0;
+      }
+
+      tr:last-child td {
+        border-bottom: 0;
+      }
+
+      tr th:last-child, tr td:last-child {
+        border-right: 0;
+      }
+
+      .table-head {
+        .gene-meta-analysis-label {
+          line-height: 1.15rem;
         }
       }
     }
 
-    .meta-analysis-data-content {
-      .meta-analysis-forest-plot {
-        border: 1px solid $gray-semi-transparent;
-        border-radius: 4px;
-        margin-left: 0.85rem;
+    .gene-stat-container {
+      border: 1px solid #dee2e6;
+      border-radius: 4px;
+      margin-bottom: 2em;
 
-        img {
-          width: 100%;
-          height: auto;
+      table {
+        margin-bottom: 0;
+
+        th, td {
+          padding: 0.5em;
         }
       }
+    }
 
-      .meta-analysis-data-gene-acute-muscle {
-        margin-bottom: 1.0rem;
-        padding: 0;
+    .meta-analysis-forest-plot {
+      border: 1px solid #dee2e6;
+      border-radius: 4px;
+    }
 
-        .note-comment {
-          font-size: 0.85rem;
-          margin: 0.45rem 0;
-
-          .material-icons {
-            line-height: 0;
-            margin-right: 0.25rem;
-          }
-        }
-      }
-
+    .gene-meta-analysis-container {
       .meta-analysis-data-table-wrapper {
         border: 1px solid #dee2e6;
         border-radius: 4px;
+        margin-bottom: 1.0rem;
         padding: 0;
       }
 
-      .metaAnalysisAcuteMuscleGeneTable {
-        border-collapse: collapse;
+      .note-comment {
         font-size: 0.85rem;
-        margin-bottom: 0;
-        text-align: center;
+        margin: 0.45rem 0;
 
-        th, td {
-          border: 1px solid #dee2e6;
-          padding-left: 0.5rem;
-          padding-right: 0.5rem;
-        }
-
-        tr:first-child th, tr:first-child td {
-          border-top: 0;
-        }
-
-        tr th:first-child, tr td:first-child {
-          border-left: 0;
-        }
-
-        tr:last-child td {
-          border-bottom: 0;
-        }
-
-        tr th:last-child, tr td:last-child {
-          border-right: 0;
-        }
-
-        .table-head {
-          .gene-meta-analysis-label {
-            line-height: 1.15rem;
-          }
+        .material-icons {
+          line-height: 0;
+          margin-right: 0.25rem;
         }
       }
     }
